--- a/index.html
+++ b/index.html
@@ -17,8 +17,13 @@
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Portfolio</a></li>
                 <li><a href="#">Contact</a></li>
+                
             </ul>
         </nav>
+        <div class="header-text">
+           <p>Director Of Culinary service </p>
+           <h1>Hi, I'm Sandeep Makasare From Canada</h1>
+        </div>
     </div>
 </div>
 </body>
