--- a/index.html
+++ b/index.html
@@ -22,9 +22,23 @@
         </nav>
         <div class="header-text">
            <p>Director Of Culinary service </p>
-           <h1>Hi, I'm Sandeep Makasare From Canada</h1>
+           <h1>Hi, I'm <span> Sandeep</span> Makasare From Canada</h1>
         </div>
     </div>
 </div>
+<div id="about">
+    <div class="container">
+      <div class="row">
+        <div class="about-col-1">
+            <img src="images/Image_20231012_105014_617.jpeg" >
+        </div>
+        <div class="about-col-2">
+            <h1> About Me</h1>
+        </div>
+      </div>
+    </div>  
+</div>
+
+
 </body>
 </html>
