--- a/index.html
+++ b/index.html
@@ -33,14 +33,13 @@
             <img src="images/Image_20231012_105014_617.jpeg" alt="About Image" >
         </div>
         <div class="about-col-2">
-            <h1> About Me</h1>
+            <h1 class="sub-title"> About Me</h1>
             <p>I hold a Master's degree and two graduation degrees in the hospitality industry, evaluated by the World Education Society of Canada, 
                 along with a Red Seal certification. With a passion for excellence, I consistently meet and exceed performance goals.
                 As the Director of Culinary Services at Amica Senior Lifestyles, I work closely with the Executive Director 
                 to drive our strategic plan, annual budgets, and staff development.  I ensure top-notch safety, quality, and client satisfaction 
                 in food services.With experience in supermarkets and strong leadership skills, I specialize in catering, food and beverage,
                 hospitality management, and hotel management.
-                
                 Let's connect and explore opportunities for collaboration and growth!</p>
         </div>
       </div>
