--- a/index.html
+++ b/index.html
@@ -41,6 +41,35 @@
                 in food services.With experience in supermarkets and strong leadership skills, I specialize in catering, food and beverage,
                 hospitality management, and hotel management.
                 Let's connect and explore opportunities for collaboration and growth!</p>
+
+                <div class="tab-titles">
+                    <p class="tab-links active-link"> Skills</p>
+                    <p class="tab-links"> Experience</p>
+                    <p class="tab-links"> Education</p>
+                </div>
+                <div class="tab-contents">
+                    <ul>
+                        <li><span>Instructor</span><br> Attention to detail</li>
+                        <li><span>Management</span><br>Customer Service and Guest Relations</li>
+                        <li><span>Leadership </span><br>Team-Building</li>
+                    </ul>
+                </div>
+                <div class="tab-contents">
+                    <ul>
+                        <li><span>Director of Culinary services </span><br>Amica Senior Lifestyle</li>
+                        <li><span>Professor</span><br>Hanson Canada</li>
+                        <li><span>Chef instructor </span><br> Sunview College- Business, Healthcare. Technology</li>
+                        <li><span>Director Of Culinary services </span><br> Revera</li>
+                        <li><span>Instructor</span><br> Liaison College of Culinary Arts</li>
+                    </ul>
+                </div>
+                <div class="tab-contents">
+                    <ul>
+                        <li><span>Bharati Vidyapeeth </span><br>BHMCT, Hotel Management and Catering</li>
+                        <li><span>Yashwantrao Chavan Maharashtra Open University </span><br> Master in hotel management and catering management </li>
+                        <li><span>Nashik University </span><br>Master's degree, hotel and tourism management</li>
+                    </ul>
+                </div>
         </div>
       </div>
     </div>  
