--- a/index.html
+++ b/index.html
@@ -77,20 +77,17 @@
 
 <script>
     var tablinks = document.getElementsByClassName("tab-links");
-    var tabcontents = document.getElementsByClassName("tab-contents");
+   var tabcontents = document.getElementsByClassName("tab-contents");
 
-    function opentab(tabname) {
-        for (var i = 0; i < tablinks.length; i++) {
-            tablinks[i].classList.remove("active-link");
-        }
-        for (var i = 0; i < tabcontents.length; i++) {
-            tabcontents[i].classList.remove("active-tab");
-        }
-
-        // Add the "active-link" class to the selected tab link
-        document.querySelector('.tab-links[data-tab="' + tabname + '"]').classList.add("active-link");
-        // Add the "active-tab" class to the selected tab content
-        document.getElementById(tabname).classList.add("active-tab");
+   function opentab(tabname){
+      for (var tablink of tablinks){
+         tablink.classList.remove("active-link");
+      }
+      for (var tabcontent of tabcontents){
+         tabcontent.classList.remove("active-tab");
+      }
+      event.currentTarget.classList.add("active-link");
+      document.getElementById(tabname).classList.add("active-tab");
     }
 </script>
 </body>
