--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Sandeep Makasare Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/d089302578.js" crossorigin="anonymous"></script>
 </head>
 <body>
  <div id="header">
@@ -36,7 +37,7 @@
             <h1 class="sub-title"> About Me</h1>
             <p>I hold a Master's degree and two graduation degrees in the hospitality industry, evaluated by the World Education Society of Canada, 
                 along with a Red Seal certification. With a passion for excellence, I consistently meet and exceed performance goals.
-                As the Director of Culinary Services at Amica Senior Lifestyles, I work closely with the Executive Director 
+                As the Director of Culinary Services, I work closely with the Executive Director 
                 to drive our strategic plan, annual budgets, and staff development.  I ensure top-notch safety, quality, and client satisfaction 
                 in food services.With experience in supermarkets and strong leadership skills, I specialize in catering, food and beverage,
                 hospitality management, and hotel management.
@@ -73,6 +74,43 @@
         </div>
       </div>
     </div>  
+</div>
+
+<!---------services----------- -->
+<div id="services">
+    <div class="container">
+        <h1 class = "sub-title"> My Services</h1>
+        <div class="services-list">
+            <div>
+                <i class="fas fa-map-marker-alt"></i>
+                <h2>Catering</h2>
+                <p>Experience the perfect blend of taste, presentation, and professionalism with 
+                    Sandeep Makasare Catering. Elevate your event, and let us take your culinary journey to new heights.
+                    Your exceptional dining experience awaits.</p>
+                <a href="#">learn more</a>
+
+            </div>
+            <div>
+                <i class="fas fa-chalkboard-teacher"></i>
+                <h2>Hotel Management</h2>
+                <p>You'll learn about the art of guest service, effective communication,
+                    and how to create memorable experiences for guests. We'll explore the intricacies of food
+                     and beverage management, marketing strategies, and financial aspects of running a successful hote</p>
+                <a href="#">learn more</a>
+
+            </div>
+            <div>
+                <i class="fas fa-utensils"></i>
+                <h2>Unique Recipes</h2>
+                <p>Are you ready to embark on a culinary journey like no other? Welcome to Sandeep Makasare's Delicious Recipes, 
+                    your one-stop destination for a world of culinary delights. Sandeep Makasare, 
+                    a passionate food enthusiast and culinary expert, is here to tantalize your taste 
+                    buds and inspire your inner chef.</p>
+                <a href="#">learn more</a>
+
+            </div>
+        </div>
+    </div>
 </div>
 
 <script>
