--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <p>Experience the perfect blend of taste, presentation, and professionalism with 
                     Sandeep Makasare Catering. Elevate your event, and let us take your culinary journey to new heights.
                     Your exceptional dining experience awaits.</p>
-                <a href="#">learn more</a>
+                <a href="#">Learn more</a>
 
             </div>
             <div>
@@ -96,7 +96,7 @@
                 <p>You'll learn about the art of guest service, effective communication,
                     and how to create memorable experiences for guests. We'll explore the intricacies of food
                      and beverage management, marketing strategies, and financial aspects of running a successful hote</p>
-                <a href="#">learn more</a>
+                <a href="#">Learn more</a>
 
             </div>
             <div>
@@ -106,7 +106,7 @@
                     your one-stop destination for a world of culinary delights. Sandeep Makasare, 
                     a passionate food enthusiast and culinary expert, is here to tantalize your taste 
                     buds and inspire your inner chef.</p>
-                <a href="#">learn more</a>
+                <a href="#">Learn more</a>
 
             </div>
         </div>
