--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Sandeep Makasare Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" >
     <script src="https://kit.fontawesome.com/d089302578.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -92,7 +92,7 @@
             </div>
             <div>
                 <i class="fas fa-chalkboard-teacher"></i>
-                <h2>Hotel Management</h2>
+                <h2>Hotel Management Course</h2>
                 <p>You'll learn about the art of guest service, effective communication,
                     and how to create memorable experiences for guests. We'll explore the intricacies of food
                      and beverage management, marketing strategies, and financial aspects of running a successful hote</p>
@@ -113,6 +113,147 @@
     </div>
 </div>
 
+<!---------portfolio--------->
+<div id="portfolio">
+
+    <div class="container">
+        <h1 class="sub-title"> My Work</h1>
+        <div class="work-list">
+            <div class="work">
+                <img src="images/Image.jpeg">
+                <div class="layer">
+                    <h3>Crostini</h3>
+                    <p>Sandeep's delectable crostini combines the creamy allure of feta and goat
+                         cheese with the sweet, juicy elegance of ripe pears. Drizzled with a rich,
+                          tangy balsamic dressing, each bite is a harmonious symphony of flavors 
+                          that dance on your taste buds. Irresistible, elegant, and simply divine.</p>
+                          <a href="#"><i class="fas fa-arrow-right"></i></a>
+                </div>
+            </div>
+            <div class="work">
+                <img src="images/image2.jpeg">
+                <div class="layer">
+                    <h3>Teaching Liason College</h3>
+                    <p>Teching students how to make Alaska.Baked Alaska is a cake and ice cream dessert topped with a caramelized meringue topping. You can use a kitchen blowtorch to caramelize the meringue instead of baking it. Vary the ice cream flavor to make a signature dish — I like to use cherry ice cream!</p>
+                          <a href="#"><i class="fas fa-arrow-right"></i></a>
+                </div>
+            </div>
+            <div class="work">
+                <img src="images/image3.jpeg">
+                <div class="layer">
+                    <h3>Crostini</h3>
+                    <p>Sandeep's delectable crostini combines the creamy allure of feta and goat
+                         cheese with the sweet, juicy elegance of ripe pears. Drizzled with a rich,
+                          tangy balsamic dressing, each bite is a harmonious symphony of flavors 
+                          that dance on your taste buds. Irresistible, elegant, and simply divine.</p>
+                          <a href="#"><i class="fas fa-arrow-right"></i></a>
+                </div>
+            </div>
+            <div class="work">
+                <img src="images/image4.jpeg">
+                <div class="layer">
+                    <h3>Crostini</h3>
+                    <p>Sandeep's delectable crostini combines the creamy allure of feta and goat
+                         cheese with the sweet, juicy elegance of ripe pears. Drizzled with a rich,
+                          tangy balsamic dressing, each bite is a harmonious symphony of flavors 
+                          that dance on your taste buds. Irresistible, elegant, and simply divine.</p>
+                          <a href="#"><i class="fas fa-arrow-right"></i></a>
+                </div>
+            </div>
+            <div class="work">
+                <img src="images/image5.jpeg">
+                <div class="layer">
+                    <h3>Crostini</h3>
+                    <p>Sandeep's delectable crostini combines the creamy allure of feta and goat
+                         cheese with the sweet, juicy elegance of ripe pears. Drizzled with a rich,
+                          tangy balsamic dressing, each bite is a harmonious symphony of flavors 
+                          that dance on your taste buds. Irresistible, elegant, and simply divine.</p>
+                          <a href="#"><i class="fas fa-arrow-right"></i></a>
+                </div>
+            </div>
+            <div class="work">
+                <img src="images/image6.jpeg">
+                <div class="layer">
+                    <h3>Crostini</h3>
+                    <p>Sandeep's delectable crostini combines the creamy allure of feta and goat
+                         cheese with the sweet, juicy elegance of ripe pears. Drizzled with a rich,
+                          tangy balsamic dressing, each bite is a harmonious symphony of flavors 
+                          that dance on your taste buds. Irresistible, elegant, and simply divine.</p>
+                          <a href="#"><i class="fas fa-arrow-right"></i></a>
+                </div>
+            </div>
+            <div class="work">
+                <img src="images/image7.jpeg">
+                <div class="layer">
+                    <h3>Crostini</h3>
+                    <p>Sandeep's delectable crostini combines the creamy allure of feta and goat
+                         cheese with the sweet, juicy elegance of ripe pears. Drizzled with a rich,
+                          tangy balsamic dressing, each bite is a harmonious symphony of flavors 
+                          that dance on your taste buds. Irresistible, elegant, and simply divine.</p>
+                          <a href="#"><i class="fas fa-arrow-right"></i></a>
+                </div>
+            </div>
+            <div class="work">
+                <img src="images/image9.jpeg">
+                <div class="layer">
+                    <h3>Crostini</h3>
+                    <p>Sandeep's delectable crostini combines the creamy allure of feta and goat
+                         cheese with the sweet, juicy elegance of ripe pears. Drizzled with a rich,
+                          tangy balsamic dressing, each bite is a harmonious symphony of flavors 
+                          that dance on your taste buds. Irresistible, elegant, and simply divine.</p>
+                          <a href="#"><i class="fas fa-arrow-right"></i></a>
+                </div>
+            </div>
+            <div class="work">
+                <img src="images/image10.jpeg">
+                <div class="layer">
+                    <h3>Crostini</h3>
+                    <p>Sandeep's delectable crostini combines the creamy allure of feta and goat
+                         cheese with the sweet, juicy elegance of ripe pears. Drizzled with a rich,
+                          tangy balsamic dressing, each bite is a harmonious symphony of flavors 
+                          that dance on your taste buds. Irresistible, elegant, and simply divine.</p>
+                          <a href="#"><i class="fas fa-arrow-right"></i></a>
+                </div>
+            </div>
+            <div class="work">
+                <img src="images/image11.jpeg">
+                <div class="layer">
+                    <h3>Crostini</h3>
+                    <p>Sandeep's delectable crostini combines the creamy allure of feta and goat
+                         cheese with the sweet, juicy elegance of ripe pears. Drizzled with a rich,
+                          tangy balsamic dressing, each bite is a harmonious symphony of flavors 
+                          that dance on your taste buds. Irresistible, elegant, and simply divine.</p>
+                          <a href="#"><i class="fas fa-arrow-right"></i></a>
+                </div>
+            </div>
+            <div class="work">
+                <img src="images/image12.jpeg">
+                <div class="layer">
+                    <h3>Crostini</h3>
+                    <p>Sandeep's delectable crostini combines the creamy allure of feta and goat
+                         cheese with the sweet, juicy elegance of ripe pears. Drizzled with a rich,
+                          tangy balsamic dressing, each bite is a harmonious symphony of flavors 
+                          that dance on your taste buds. Irresistible, elegant, and simply divine.</p>
+                          <a href="#"><i class="fas fa-arrow-right"></i></a>
+                </div>
+            </div>
+            <div class="work">
+                <img src="images/image13.jpeg">
+                <div class="layer">
+                    <h3>Crostini</h3>
+                    <p>Sandeep's delectable crostini combines the creamy allure of feta and goat
+                         cheese with the sweet, juicy elegance of ripe pears. Drizzled with a rich,
+                          tangy balsamic dressing, each bite is a harmonious symphony of flavors 
+                          that dance on your taste buds. Irresistible, elegant, and simply divine.</p>
+                          <a href="#"><i class="fas fa-arrow-right"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
 <script>
     var tablinks = document.getElementsByClassName("tab-links");
    var tabcontents = document.getElementsByClassName("tab-contents");
@@ -126,6 +267,7 @@
       }
       event.currentTarget.classList.add("active-link");
       document.getElementById(tabname).classList.add("active-tab");
+      
     }
 </script>
 </body>
